--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>+
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
     <h1> asu  :2022 -2023</h1>
-    <script src="main.js"></script>
 </body>
 </html>
